deployment/02-variable-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: variable-tracker
    app: variable
    variable.component: variable-tracker
  name: variable-tracker
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: variable-tracker
